# Randomkingdominion

./: .gitignore  LICENSE.txt  README.md  RandomKingdominion.py  TODO.md  card_data.csv  card_scraper.py  changelog.yaml  dominion_card_scraper.py  dominion_randomizer.py  perform_tests.ipynb  pyproject.toml  requirements.txt  start_gui.ipynb  wiki_card_scraper.py
.streamlit/: config.toml
assets/: randomization_config.ini  randomization_config_default.ini
card_info/: Dominion Statistics - since Allies.csv  card_data.csv  combo_changelog.md  draw_qualities.txt  good_card_data.csv  good_combo_data.csv  good_interaction_data.csv  interaction_changelog.md  raw_card_data.csv  raw_combo_data.csv
flutter_test_1/: pubspec.yaml
modules/: add_info_columns.py  containers.py  creator_functions.py  data_handling.py  info_adder.py  utils.py  write_image_database.py
random_kingdominion/: __init__.py  __main__.py  constants.py  cso_frame_utils.py  cso_series_utils.py  logger.py  single_cso_utils.py
randomizer_modules/: __init__.py  add_info_columns.py  base_widgets.py  config.py  constants.py  containers.py  creator_functions.py  data_handling.py  info_adder.py  kingdom.py  kingdom_display_widget.py  main_ui.py  utils.py  write_image_database.py
randomizer_modules_tests/: __main__.py  constants_test.py  data_handling_test.py  kingdom_test.py
scripts/: advance_campaign.py  analyse_interactions.ipynb  card_scraper.py  dump_current_campaign.py  image_manipulation.py  parse_kingdoms.ipynb  perform_tests.ipynb  register_daily_kingdom.py  set_campaign_kingdom.py  (+2 more)
(+284 files in other folders)
